- add logging when session invalidator starts - validate data on all nodes when running the non-sticky version of the multi-node load test - increase socket timeout inside weblogic - enabled verbose:gc for spawned app servers
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@917 7fc7bbf3-cf45-46d4-be06-341739edd864